stuck on nav issues within nav componant for scroll effect

--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
-  display: center;
+  text-align: flex-start;
+  display: inline;
 }
 
 /* .footer {
